Covered for a text kerning bug in Chrome 35

--- a/app/assets/stylesheets/body_copy.css.scss
+++ b/app/assets/stylesheets/body_copy.css.scss
@@ -62,8 +62,8 @@
     margin: 0 0 1.5em;
   }
 
-  img+p.caption {
-    margin-top: -1em;
+  img + p.caption {
+    margin-top: -.8em;
   }
 
   .inline-video {
